--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link href="./output.css" rel="stylesheet">
     <title>George Cortes' Website</title>
 </head>
-<body>
+<body class="font-mono   ">
     <header class="bg-zinc-800">
         <nav class=" flex justify-center text-slate-200 ">
             <a class=" border-r-2 border-r-red-700 w-36 pt-4 pb-4 text-center hover:bg-zinc-900 hover:text-yellow-300" href="/">Home</a>
@@ -15,15 +15,55 @@
             <a class=" w-36 pt-4 pb-4 text-center hover:bg-zinc-900 hover:text-yellow-300" href="/contact">Contact</a>
         </nav>
     </header>
-    <main class="text-slate-100 text-center bg-hero-pattern h-svh bg-cover bg-no-repeat">
+    <main class="text-slate-100 text-center bg-hero-pattern bg-cover">
         <section class=" flex justify-center flex-col items-center p-10">
             <img src="/public/images/cat_cute.png" class="max-w-56 max-h-56 border-2 border-slate-50 rounded-full"> 
            <h1 class="text-4xl"> George Cortes</h1>
            <span class="italic text-xl">Aspiring developer</span>
         </section>
-        <section>
-            
+        <!-- Project overview -->
+        <section class="bg-stone-800 m-10 p-20 rounded-xl mb-0">
+            <h3 class="text-2xl font-bold">Exogenous Thought</h3>
+            <!-- Card Container -->
+             <div class="grid sm:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-3  justify-center shadow-lg place-items-center">
+                <!-- Card elements -->
+                 <article class=" flex flex-col justify-center items-center border-2 p-6 border-green-200 rounded-xl text-start w-[400px]">
+                    <div class=" w-[350px]">
+                        <!-- card image container added here -->
+                        <img class="w-full rounded-lg" src="/public/images/placeholder.jpeg">
+                    </div>
+                    <h3 class="text-slate-200 text-4xl font-bold">Card Header</h3>
+                    <p class="text-md italic">Small description descripbnig what i am attempting to create in this card section. Also, make this smaller font </p>
+                    <!-- Maybe make this a link? Go to github? -->
+                    <a href="/" class="block ml-auto  hover:text-cyan-700 p-4 bg-cyan-600  rounded-xl" > Learn More</a>
+                 </article>
+                 <!-- Card 2 -->
+                 <article class=" flex flex-col justify-center items-center border-2 p-6 border-green-200 rounded-xl text-start w-[400px]">
+                    <div class=" w-[350px]">
+                        <!-- card image container added here -->
+                        <img class="w-full rounded-lg" src="/public/images/placeholder.jpeg">
+                    </div>
+                    <h3 class="text-slate-200 text-4xl font-bold">Card Header</h3>
+                    <p class="text-md italic">Small description descripbnig what i am attempting to create in this card section. Also, make this smaller font </p>
+                    <!-- Maybe make this a link? Go to github? -->
+                    <a href="/" class="block ml-auto  hover:text-cyan-700 p-4 bg-cyan-600  rounded-xl" > Learn More</a>
+                 </article>
+                  <!-- Card 3 -->
+                  <article class=" flex flex-col justify-center items-center border-2 p-6 border-green-200 rounded-xl text-start w-[400px]">
+                    <div class=" w-[350px]">
+                        <!-- card image container added here -->
+                        <img class="w-full rounded-lg" src="/public/images/placeholder.jpeg">
+                    </div>
+                    <h3 class="text-slate-200 text-4xl font-bold">Card Header</h3>
+                    <p class="text-md italic">Small description descripbnig what i am attempting to create in this card section. Also, make this smaller font </p>
+                    <!-- Maybe make this a link? Go to github? -->
+                    <a href="/" class="block ml-auto  hover:text-cyan-700 p-4 bg-cyan-600  rounded-xl" > Learn More</a>
+                 </article>
+             </div>
         </section>
+        <footer class="bg-slate-900 h-36">
+            <span>The Footer until further notice</span>
+        </footer>
     </main>
 </body>
 </html>
