Added pane window style and possible card background color

--- a/src/index.html
+++ b/src/index.html
@@ -19,15 +19,15 @@
         <section class=" flex justify-center flex-col items-center p-10">
             <img src="/public/images/cat_cute.png" class="max-w-56 max-h-56 border-2 border-slate-50 rounded-full"> 
            <h1 class="text-4xl"> George Cortes</h1>
-           <span class="italic text-xl">Aspiring developer</span>
+           <span class="italic text-xl">Developer for Web and Mobile</span>
         </section>
         <!-- Project overview -->
-        <section class="bg-stone-800 m-10 p-20 rounded-xl mb-0">
+        <section class="bg-stone-400/40  m-10 p-20 rounded-xl mb-0">
             <h3 class="text-2xl font-bold">Exogenous Thought</h3>
             <!-- Card Container -->
-             <div class="grid sm:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-3  justify-center shadow-lg place-items-center">
+             <div class="grid sm:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-5   justify-center shadow-lg place-items-center">
                 <!-- Card elements -->
-                 <article class=" flex flex-col justify-center items-center border-2 p-6 border-green-200 rounded-xl text-start w-[400px]">
+                 <article class="bg-stone-800 flex flex-col justify-center items-center border-2 p-6 border-stone-900 rounded-xl text-start w-[400px]">
                     <div class=" w-[350px]">
                         <!-- card image container added here -->
                         <img class="w-full rounded-lg" src="/public/images/placeholder.jpeg">
