--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         </section>
         <!-- Project overview -->
         <section class="bg-stone-400/40  m-10 p-20 rounded-xl mb-0">
-            <h3 class="text-2xl font-bold">Exogenous Thought</h3>
+            <h3 class="text-2xl font-bold">Change this Projects</h3>
             <!-- Card Container -->
              <div class="grid sm:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-5   justify-center shadow-lg place-items-center">
                 <!-- Card elements -->
@@ -60,6 +60,24 @@
                     <a href="/" class="block ml-auto  hover:text-cyan-700 p-4 bg-cyan-600  rounded-xl" > Learn More</a>
                  </article>
              </div>
+        </section>
+        <section>
+            <h3>About Me </h3>
+            <div class="grid sm:grid-cols-1 md:grid-cols-2 gap-4 justify-center place-items-center m-10">
+                <article class="border-r-2 p-4">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum omnis officiis sapiente aliquid optio deleniti veniam aut cum eaque reiciendis iste impedit saepe molestiae quam nobis, quos quia dolorum. Consectetur.
+
+                </article>
+                <div>
+                    <img src="/public/images/placeholder.jpeg">
+                </div>
+            </div>
+        </section>
+        <section class=" m-10 p-20">
+            <h3> Get in Touch</h3>
+            <form class="bg-stone-400">
+                <input type="text" placeholder="First Name"  name="f-name" id="firstName" class="w-full">
+            </form>
         </section>
         <footer class="bg-slate-900 h-36">
             <span>The Footer until further notice</span>
