--- a/src/index.html
+++ b/src/index.html
@@ -75,8 +75,13 @@
         </section>
         <section class=" m-10 p-20">
             <h3> Get in Touch</h3>
-            <form class="bg-stone-400">
-                <input type="text" placeholder="First Name"  name="f-name" id="firstName" class="w-full">
+            <form class="bg-stone-100 p-2 rounded-md">
+             <div>
+             <input type="text" placeholder="First Name"  name="f-name" id="firstName" class="w-full">
+             </div>
+             <div>
+             <input type="text" placeholder="Last Name"  name="l-name" id="lasttName" class="w-full">
+             </div>
             </form>
         </section>
         <footer class="bg-slate-900 h-36">
