--- a/src/index.html
+++ b/src/index.html
@@ -16,72 +16,84 @@
         </nav>
     </header>
     <main class="text-slate-100 text-center bg-hero-pattern bg-cover">
-        <section class=" flex justify-center flex-col items-center p-10">
+        <!-- Hero Section -->
+        <section class=" flex justify-center flex-col items-center p-10 min-h-screen">
             <img src="/public/images/cat_cute.png" class="max-w-56 max-h-56 border-2 border-slate-50 rounded-full"> 
-           <h1 class="text-4xl"> George Cortes</h1>
-           <span class="italic text-xl">Developer for Web and Mobile</span>
+           <h1 class="text-6xl p-4"> George Cortes</h1>
+           <span class="italic text-2xl p-4">Developer for Web and Mobile</span>
         </section>
         <!-- Project overview -->
         <section class="bg-stone-400/40  m-10 p-20 rounded-xl mb-0">
-            <h3 class="text-2xl font-bold">Change this Projects</h3>
+            <h3 class="text-4xl font-bold pb-12" >Mental Monologue</h3>
             <!-- Card Container -->
-             <div class="grid sm:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-5   justify-center shadow-lg place-items-center">
+             <div class="grid sm:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-5   justify-center place-items-center sm:hover:gap-9">
                 <!-- Card elements -->
-                 <article class="bg-stone-800 flex flex-col justify-center items-center border-2 p-6 border-stone-900 rounded-xl text-start w-[400px]">
+                 <article class="bg-stone-800 flex flex-col justify-center items-center border-2 p-6 border-stone-900 rounded-xl text-start w-[400px] shadow-lg hover:scale-110 transition-all ease-in-out">
                     <div class=" w-[350px]">
                         <!-- card image container added here -->
                         <img class="w-full rounded-lg" src="/public/images/placeholder.jpeg">
                     </div>
-                    <h3 class="text-slate-200 text-4xl font-bold">Card Header</h3>
-                    <p class="text-md italic">Small description descripbnig what i am attempting to create in this card section. Also, make this smaller font </p>
+                    <h3 class="text-slate-200 text-4xl font-bold p-5">Card Header</h3>
+                    <p class="text-md italic p-5 ">Small description descripbnig what i am attempting to create in this card section. Also, make this smaller font </p>
                     <!-- Maybe make this a link? Go to github? -->
-                    <a href="/" class="block ml-auto  hover:text-cyan-700 p-4 bg-cyan-600  rounded-xl" > Learn More</a>
+                    <a href="/" class="block ml-auto  hover:text-zinc-900 p-4 bg-gradient-to-r from-yellow-500 to-orange-500  rounded-xl" > Learn More</a>
                  </article>
                  <!-- Card 2 -->
-                 <article class=" flex flex-col justify-center items-center border-2 p-6 border-green-200 rounded-xl text-start w-[400px]">
+                 <article class="bg-stone-800 flex flex-col justify-center items-center border-2 p-6 border-stone-900 rounded-xl text-start w-[400px] shadow-x drop-shadow-xl hover:scale-110 transition-all ease-in-out">
                     <div class=" w-[350px]">
                         <!-- card image container added here -->
                         <img class="w-full rounded-lg" src="/public/images/placeholder.jpeg">
                     </div>
-                    <h3 class="text-slate-200 text-4xl font-bold">Card Header</h3>
-                    <p class="text-md italic">Small description descripbnig what i am attempting to create in this card section. Also, make this smaller font </p>
+                    <h3 class="text-slate-200 text-4xl font-bold p-5">Card Header</h3>
+                    <p class="text-sm  p-5 italic">Small description descripbnig what i am attempting to create in this card section. Also, make this smaller font </p>
                     <!-- Maybe make this a link? Go to github? -->
-                    <a href="/" class="block ml-auto  hover:text-cyan-700 p-4 bg-cyan-600  rounded-xl" > Learn More</a>
+                    <a href="/" class="block ml-auto  hover:text-zinc-900 p-4 bg-gradient-to-r from-yellow-500 to-orange-500 rounded-xl" > Learn More</a>
                  </article>
                   <!-- Card 3 -->
-                  <article class=" flex flex-col justify-center items-center border-2 p-6 border-green-200 rounded-xl text-start w-[400px]">
+                  <article class="bg-stone-800 flex flex-col justify-center items-center border-2 p-6 border-stone-800 rounded-xl text-start w-[400px] shadow-lg hover:scale-110 transition-all ease-in-out">
                     <div class=" w-[350px]">
                         <!-- card image container added here -->
                         <img class="w-full rounded-lg" src="/public/images/placeholder.jpeg">
                     </div>
-                    <h3 class="text-slate-200 text-4xl font-bold">Card Header</h3>
-                    <p class="text-md italic">Small description descripbnig what i am attempting to create in this card section. Also, make this smaller font </p>
+                    <h3 class="text-slate-200 text-4xl font-bold p-5">Card Header</h3>
+                    <p class="text-sm italic p-5">Small description descripbnig what i am attempting to create in this card section. Also, make this smaller font </p>
                     <!-- Maybe make this a link? Go to github? -->
-                    <a href="/" class="block ml-auto  hover:text-cyan-700 p-4 bg-cyan-600  rounded-xl" > Learn More</a>
+                    <a href="/" class="block ml-auto  hover:text-zinc-900  p-4 bg-gradient-to-r from-yellow-500 to-orange-500  rounded-xl" > Learn More</a>
                  </article>
              </div>
         </section>
-        <section>
-            <h3>About Me </h3>
-            <div class="grid sm:grid-cols-1 md:grid-cols-2 gap-4 justify-center place-items-center m-10">
-                <article class="border-r-2 p-4">
+        <!-- About Section -->
+        <section class=" flex justify-center flex-col items-center p-10 min-h-screen">
+            <h3 class="text-4xl">About Me </h3>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-5 justify-center place-items-center m-10">
+                <article class="md:border-r-2 p-4">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum omnis officiis sapiente aliquid optio deleniti veniam aut cum eaque reiciendis iste impedit saepe molestiae quam nobis, quos quia dolorum. Consectetur.
-
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas dolore et sapiente beatae, minus, doloremque tempore cum veniam optio dolores cumque dicta repellat, repudiandae nisi consectetur sit suscipit iure aliquam
                 </article>
                 <div>
                     <img src="/public/images/placeholder.jpeg">
                 </div>
             </div>
         </section>
-        <section class=" m-10 p-20">
-            <h3> Get in Touch</h3>
-            <form class="bg-stone-100 p-2 rounded-md">
-             <div>
-             <input type="text" placeholder="First Name"  name="f-name" id="firstName" class="w-full">
-             </div>
-             <div>
-             <input type="text" placeholder="Last Name"  name="l-name" id="lasttName" class="w-full">
-             </div>
+        <!-- Contact Form -->
+        <section class="bg-stone-400/40  mx-10 my-5 p-20 rounded-xl mb-0 min-h-[80vh] font-sans ">
+            <h3 class="text-4xl p-5 mb-5"> Lets Get In Touch</h3>
+            <form class=" md:min-h-[50vh] text-center text-zinc-900">
+                <div class="flex flex-col justify-center items-center">
+                    <label>Full Name</label>
+                    <input class="w-full md:w-[600px] p-2 rounded-md mb-5 text-zinc-900 " type="text" placeholder="Full Name" required>
+                </div>
+                <div class="flex flex-col justify-center items-center">
+                    <label>Email</label>
+                    <input class="w-full md:w-[600px] p-2 rounded-md mb-5 "  type="email" placeholder="Email" required>
+                </div>
+                <div class="flex flex-col justify-center items-center">
+                    <label>Any Questions?</label>
+                    <textarea class="w-full md:w-[600px] p-5 rounded-md mb-5 "  ></textarea>
+                </div>
+                <div class="flex flex-col justify-center items-center">
+                    <button class="w-full md:w-1/2 bg-stone-500 mb-5 p-2 rounded-md">Send</button>
+                </div>
             </form>
         </section>
         <footer class="bg-slate-900 h-36">
