--- a/src/index.html
+++ b/src/index.html
@@ -6,18 +6,18 @@
     <link href="./output.css" rel="stylesheet">
     <title>George Cortes' Website</title>
 </head>
-<body class="font-mono   ">
-    <header class="bg-zinc-800">
+<body class="font-mono bg-zinc-800 ">
+    <header class="">
         <nav class=" flex justify-center text-slate-200 ">
             <a class=" border-r-2 border-r-red-700 w-36 pt-4 pb-4 text-center hover:bg-zinc-900 hover:text-yellow-300" href="/">Home</a>
-            <a class="border-r-2 border-r-slate-700 w-36 pt-4 pb-4 text-center hover:bg-zinc-900 hover:text-yellow-300" href="/projects">Projects</a>
-            <a class="border-r-2 border-r-gray-500 w-36 pt-4 pb-4 text-center hover:bg-zinc-900 hover:text-yellow-300" href="/about">About</a>
+            <a class="border-r-2 border-r-red-700 w-36 pt-4 pb-4 text-center hover:bg-zinc-900 hover:text-yellow-300" href="/projects">Projects</a>
+            <a class="border-r-2 border-r-red-500 w-36 pt-4 pb-4 text-center hover:bg-zinc-900 hover:text-yellow-300" href="/about">About</a>
             <a class=" w-36 pt-4 pb-4 text-center hover:bg-zinc-900 hover:text-yellow-300" href="/contact">Contact</a>
         </nav>
     </header>
-    <main class="text-slate-100 text-center bg-hero-pattern bg-cover">
+    <main class=" pb-5 text-slate-100 text-center bg-hero-pattern bg-cover bg-no-repeat bg-center">
         <!-- Hero Section -->
-        <section class=" flex justify-center flex-col items-center p-10 min-h-screen">
+        <section class=" flex justify-center flex-col items-center p-10 min-h-[80vh]">
             <img src="/public/images/cat_cute.png" class="max-w-56 max-h-56 border-2 border-slate-50 rounded-full"> 
            <h1 class="text-6xl p-4"> George Cortes</h1>
            <span class="italic text-2xl p-4">Developer for Web and Mobile</span>
@@ -76,29 +76,32 @@
             </div>
         </section>
         <!-- Contact Form -->
-        <section class="bg-stone-400/40  mx-10 my-5 p-20 rounded-xl mb-0 min-h-[80vh] font-sans ">
-            <h3 class="text-4xl p-5 mb-5"> Lets Get In Touch</h3>
-            <form class=" md:min-h-[50vh] text-center text-zinc-900">
-                <div class="flex flex-col justify-center items-center">
-                    <label>Full Name</label>
-                    <input class="w-full md:w-[600px] p-2 rounded-md mb-5 text-zinc-900 " type="text" placeholder="Full Name" required>
+        <section class="bg-stone-400/40  mx-20 mt-5 p-20 rounded-xl mb-10 min-h-[80vh] font-sans ">
+            <h3 class="text-4xl md:text-2xl p-5 mb-5"> Get in Touch</h3>
+            <form class=" md:min-h-[50vh] text-center text-zinc-900 ">
+                <div class="flex flex-col justify-center items-center mx-10 ">
+                    <label for="f-name" class="text-zinc-50">Full Name</label>
+                    <input id="f-name" class="w-full md:w-[600px] lg:w-[800px]  p-2 rounded-md mb-5 text-zinc-900 " type="text" placeholder="Full Name" required>
                 </div>
-                <div class="flex flex-col justify-center items-center">
-                    <label>Email</label>
-                    <input class="w-full md:w-[600px] p-2 rounded-md mb-5 "  type="email" placeholder="Email" required>
+                <div class="flex flex-col justify-center items-center mx-10">
+                    <label  class="text-zinc-50" for="email">Email</label>
+                    <input id="email" name="email"  class="w-full md:w-[600px] lg:w-[800px]  p-2 rounded-md mb-5 "  type="email" placeholder="Email" required>
                 </div>
-                <div class="flex flex-col justify-center items-center">
-                    <label>Any Questions?</label>
-                    <textarea class="w-full md:w-[600px] p-5 rounded-md mb-5 "  ></textarea>
-                </div>
-                <div class="flex flex-col justify-center items-center">
-                    <button class="w-full md:w-1/2 bg-stone-500 mb-5 p-2 rounded-md">Send</button>
+                <div class="flex flex-col justify-center items-center mx-10">
+                    <label  class="text-zinc-50" for="email-res">Any Questions?</label>
+                    <textarea rows="5" id="email-res" class="w-full lg:w-[800px]  md:w-[600px] p-5 rounded-md mb-5 "></textarea>
+                <div class="w-full md:w-[600px] lg:w-[800px] mx-10">
+                    <button class="w-full  bg-stone-500 mb-5 p-2 rounded-md text-zinc-50">Send</button>
                 </div>
             </form>
         </section>
-        <footer class="bg-slate-900 h-36">
-            <span>The Footer until further notice</span>
-        </footer>
     </main>
+    <footer class="text-zinc-50 bt-5 ">
+        <div class="mx-20 my-10">
+            <p class="text-center" >
+               Thank you for visiting! 
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
